force-app/main/default/objects/Lead/fields/canal__c.field-meta.xml
<CustomField>
    <fullName>canal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>01/02</inlineHelpText>
    <label>Canal</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3 AND 6) OR (1 AND 4 AND 5 AND 6)</booleanFilter>
        <errorMessage>Debe elegir el canal válido</errorMessage>
        <filterItems>
            <field>udcDetallada__c.codigoUDC__c</field>
            <operation>equals</operation>
            <value>01/02</value>
        </filterItems>
        <filterItems>
            <field>$Source.compania__c</field>
            <operation>equals</operation>
            <valueField>udcDetallada__c.tipoUDC__r.compania__c</valueField>
        </filterItems>
        <filterItems>
            <field>udcDetallada__c.tipoUDC__r.compania__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>udcDetallada__c.tipoUDC__r.compania__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>udcDetallada__c.tipoUDC__r.corporativa__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>udcDetallada__c.tipoUDC__r.ambitoUDC__c</field>
            <operation>equals</operation>
            <value>Clientes, Contactos</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>udcDetallada__c</referenceTo>
    <relationshipLabel>Candidatos (Canal)</relationshipLabel>
    <relationshipName>CandidatosCanales</relationshipName>
    <type>Lookup</type>
</CustomField>