force-app/main/default/objects/Lead/fields/canalDestino__c.field-meta.xml
<CustomField>
    <fullName>canalDestino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>01/10</inlineHelpText>
    <label>Canal Destino</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Debe elegir un canal de destino válido</errorMessage>
        <filterItems>
            <field>udcDetallada__c.codigoUDC__c</field>
            <operation>equals</operation>
            <value>01/10</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>udcDetallada__c</referenceTo>
    <relationshipLabel>Candidatos (Canal destino)</relationshipLabel>
    <relationshipName>CandidatosCanalesDestino</relationshipName>
    <type>Lookup</type>
</CustomField>