force-app/main/default/objects/Lead/fields/cargo__c.field-meta.xml
<CustomField>
    <fullName>cargo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>01/FC</inlineHelpText>
    <label>Cargo</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Debe elegir un cargo válido</errorMessage>
        <filterItems>
            <field>udcDetallada__c.codigoUDC__c</field>
            <operation>equals</operation>
            <value>01/FC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>udcDetallada__c</referenceTo>
    <relationshipLabel>Candidatos (Cargo)</relationshipLabel>
    <relationshipName>CandidatosCargos</relationshipName>
    <type>Lookup</type>
</CustomField>