force-app/main/default/objects/Lead/fields/clienteFinal__c.field-meta.xml
<CustomField>
    <fullName>clienteFinal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>01/05</inlineHelpText>
    <label>Cliente Final</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Debe elegir un cliente final válido.</errorMessage>
        <filterItems>
            <field>udcDetallada__c.codigoUDC__c</field>
            <operation>equals</operation>
            <value>01/05</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>udcDetallada__c</referenceTo>
    <relationshipLabel>Prospectos (Cliente final)</relationshipLabel>
    <relationshipName>Prospectos1</relationshipName>
    <type>Lookup</type>
</CustomField>