force-app/main/default/objects/Lead/fields/direccionDetallada__c.field-meta.xml
<CustomField>
    <fullName>direccionDetallada__c</fullName>
    <label>Dirección Detallada</label>
    <length>160</length>
    <type>Text</type>
</CustomField>