force-app/main/default/objects/Lead/fields/Inversionista__c.field-meta.xml
<CustomField>
    <fullName>Inversionista__c</fullName>
    <defaultValue>&apos;NO&apos;</defaultValue>
    <label>Es Inversionista?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>