force-app/main/default/objects/Lead/fields/nombreComercial__c.field-meta.xml
<CustomField>
    <fullName>nombreComercial__c</fullName>
    <label>Nombre Comercial</label>
    <length>40</length>
    <type>Text</type>
</CustomField>