force-app/main/default/objects/Lead/fields/numeroIdentificacionFiscalNatural__c.field-meta.xml
<CustomField>
    <fullName>numeroIdentificacionFiscalNatural__c</fullName>
    <label>Número de Identificación Natural</label>
    <length>20</length>
    <type>Text</type>
</CustomField>