force-app/main/default/objects/Lead/fields/pais__c.field-meta.xml
<CustomField>
    <fullName>pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>00/CN</inlineHelpText>
    <label>País</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>udcDetallada__c.codigoUDC__c</field>
            <operation>equals</operation>
            <value>00/CN</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>udcDetallada__c</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>CandidatosPaises</relationshipName>
    <type>Lookup</type>
</CustomField>