force-app/main/default/objects/Lead/fields/regionComercial__c.field-meta.xml
<CustomField>
    <fullName>regionComercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>01/03</inlineHelpText>
    <label>Región Comercial</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Debe elegir una región válida</errorMessage>
        <filterItems>
            <field>udcDetallada__c.codigoUDC__c</field>
            <operation>equals</operation>
            <value>01/03</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>udcDetallada__c</referenceTo>
    <relationshipLabel>Candidatos (Región comercial)</relationshipLabel>
    <relationshipName>CandidatosRegionesComerciales</relationshipName>
    <type>Lookup</type>
</CustomField>