force-app/main/default/objects/Lead/fields/tipoIdentificacionFiscal__c.field-meta.xml
<CustomField>
    <fullName>tipoIdentificacionFiscal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>H00/TA</inlineHelpText>
    <label>Tipo de Identificación Fiscal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>udcDetallada__c.codigoUDC__c</field>
            <operation>equals</operation>
            <value>H00/TA</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>udcDetallada__c</referenceTo>
    <relationshipLabel>Candidatos (Tipo de identificación fiscal)</relationshipLabel>
    <relationshipName>CandidatosTiposIdFiscal</relationshipName>
    <type>Lookup</type>
</CustomField>