force-app/main/default/objects/Lead/recordTypes/Inversionista.recordType-meta.xml
<RecordType>
    <fullName>Inversionista</fullName>
    <active>true</active>
    <businessProcess>Prospectos</businessProcess>
    <label>Inversionista</label>
</RecordType>