force-app/main/default/objects/Lead/validationRules/IngresoNumeroIdentificacionFiscal.validationRule-meta.xml
<ValidationRule>
    <fullName>IngresoNumeroIdentificacionFiscal</fullName>
    <active>true</active>
    <description>Colocar sólo valores numéricos</description>
    <errorConditionFormula>AND(NOT(ISBLANK( numeroIdentificacionFiscal__c )),NOT(ISNUMBER(numeroIdentificacionFiscal__c )))</errorConditionFormula>
    <errorDisplayField>numeroIdentificacionFiscal__c</errorDisplayField>
    <errorMessage>Colocar sólo valores numéricos</errorMessage>
</ValidationRule>