force-app/main/default/objects/Lead/validationRules/IngresoNumeroIdentificacionFiscalNatural.validationRule-meta.xml
<ValidationRule>
    <fullName>IngresoNumeroIdentificacionFiscalNatural</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( numeroIdentificacionFiscalNatural__c )),NOT(ISNUMBER(numeroIdentificacionFiscalNatural__c )))</errorConditionFormula>
    <errorDisplayField>numeroIdentificacionFiscalNatural__c</errorDisplayField>
    <errorMessage>Colocar sólo valores numéricos</errorMessage>
</ValidationRule>